--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">语音控制</string>
+    <string name="app_name">灵动之翼</string>
     <string name="action_settings">Settings</string>
     <string name="bluetooth_connect">Connect</string>
 </resources>
