--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">灵动之翼</string>
     <string name="action_settings">Settings</string>
     <string name="bluetooth_connect">Connect</string>
+    <string name="ui_default">xxx</string>
 </resources>
